--- a/Thanksgiving2014.html
+++ b/Thanksgiving2014.html
@@ -19,41 +19,41 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <p align=center> 
 Thanksgiving 2014
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2014/IMG_1155.jpg" align="top"style="max-width: 50%" > <p align=center  >
+<p align=center><img src="Thanksgiving2014/IMG_1155.JPG" align="top"style="max-width: 50%" > <p align=center  >
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2014/IMG_1156.jpg" align="top"style="max-width: 50%"> <p align=center>
+<p align=center><img src="Thanksgiving2014/IMG_1156.JPG" align="top"style="max-width: 50%"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2014/IMG_1157.jpg" align="top"style="max-width: 50%"> <p align=center>
+<p align=center><img src="Thanksgiving2014/IMG_1157.JPG" align="top"style="max-width: 50%"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2014/IMG_1159.jpg" align="top"style="max-width: 50%"> <p align=center>
+<p align=center><img src="Thanksgiving2014/IMG_1159.JPG" align="top"style="max-width: 50%"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2014/IMG_1160.jpg" align="top"style="max-width: 50%"> <p align=center>
+<p align=center><img src="Thanksgiving2014/IMG_1160.JPG" align="top"style="max-width: 50%"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2014/IMG_1163.jpg" align="top"style="max-width: 50%"> <p align=center>
+<p align=center><img src="Thanksgiving2014/IMG_1163.JPG" align="top"style="max-width: 50%"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2014/IMG_1164.jpg" align="top"style="max-width: 50%"> <p align=center>
+<p align=center><img src="Thanksgiving2014/IMG_1164.JPG" align="top"style="max-width: 50%"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2014/IMG_1165.jpg" align="top"style="max-width: 50%"> <p align=center>
+<p align=center><img src="Thanksgiving2014/IMG_1165.JPG" align="top"style="max-width: 50%"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2014/IMG_1167.jpg" align="top"style="max-width: 50%"> <p align=center>
+<p align=center><img src="Thanksgiving2014/IMG_1167.JPG" align="top"style="max-width: 50%"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2014/IMG_1168.jpg" align="top"style="max-width: 50%"> <p align=center>
+<p align=center><img src="Thanksgiving2014/IMG_1168.JPG" align="top"style="max-width: 50%"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2014/IMG_1169.jpg" align="top"style="max-width: 50%"> <p align=center>
+<p align=center><img src="Thanksgiving2014/IMG_1169.JPG" align="top"style="max-width: 50%"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2014/IMG_1170.jpg" align="top"style="max-width: 50%"> <p align=center>
+<p align=center><img src="Thanksgiving2014/IMG_1170.JPG" align="top"style="max-width: 50%"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2014/IMG_1171.jpg" align="top"style="max-width: 50%"> <p align=center>
+<p align=center><img src="Thanksgiving2014/IMG_1171.JPG" align="top"style="max-width: 50%"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2014/IMG_1175.jpg" align="top"style="max-width: 50%"> <p align=center>
+<p align=center><img src="Thanksgiving2014/IMG_1175.JPG" align="top"style="max-width: 50%"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2014/IMG_1177.jpg" align="top"style="max-width: 50%"> <p align=center>
+<p align=center><img src="Thanksgiving2014/IMG_1177.JPG" align="top"style="max-width: 50%"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2014/IMG_1178.jpg" align="top"style="max-width: 50%"> <p align=center>
+<p align=center><img src="Thanksgiving2014/IMG_1178.JPG" align="top"style="max-width: 50%"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2014/IMG_1180.jpg" align="top"style="max-width: 50%"> <p align=center>
+<p align=center><img src="Thanksgiving2014/IMG_1180.JPG" align="top"style="max-width: 50%"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2014/IMG_1181.jpg" align="top"style="max-width: 50%"> <p align=center>
+<p align=center><img src="Thanksgiving2014/IMG_1181.JPG" align="top"style="max-width: 50%"> <p align=center>
 <hr size=3 width=90%> 
 <center>The END!</center>
 <br>
