--- a/Thanksgiving2015.html
+++ b/Thanksgiving2015.html
@@ -18,46 +18,48 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 
 <p align=center> 
 Thanksgiving 2015
+
+
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2015/20151126_130933.jpg" align="top"style="max-width: 50%" > <p align=center>
+<p align=center><img src="Thanksgiving2015/20151126_130933.JPG" align="top"style="max-width: 50%" > <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2015/20151126_131025_HDR.jpg" align="top"style="max-width: 50%" > <p align=center>
+<p align=center><img src="Thanksgiving2015/20151126_131025_HDR.JPG" align="top"style="max-width: 50%" > <p align=center>
 <hr size=3 width=90%>
-<p align=center><img src="Thanksgiving2015/20151126_140227_HDR.jpg" align="top"style="max-width: 50%" > <p align=center>
+<p align=center><img src="Thanksgiving2015/20151126_140227_HDR.JPG" align="top"style="max-width: 50%" > <p align=center>
 <hr size=3 width=90%>
-<p align=center><img src="Thanksgiving2015/20151126_145721_HDR.jpg" align="top"style="max-width: 50%" > <p align=center>
+<p align=center><img src="Thanksgiving2015/20151126_145721_HDR.JPG" align="top"style="max-width: 50%" > <p align=center>
 <hr size=3 width=90%>
-<p align=center><img src="Thanksgiving2015/20151126_150905_HDR.jpg" align="top"style="max-width: 50%" > <p align=center>
+<p align=center><img src="Thanksgiving2015/20151126_150905_HDR.JPG" align="top"style="max-width: 50%" > <p align=center>
 <hr size=3 width=90%>
-<p align=center><img src="Thanksgiving2015/20151126_151009.jpg" align="top"style="max-width: 50%" > <p align=center>
+<p align=center><img src="Thanksgiving2015/20151126_151009.JPG" align="top"style="max-width: 50%" > <p align=center>
 <hr size=3 width=90%>
-<p align=center><img src="Thanksgiving2015/20151126_151012.jpg" align="top"style="max-width: 50%" > <p align=center>
+<p align=center><img src="Thanksgiving2015/20151126_151012.JPG" align="top"style="max-width: 50%" > <p align=center>
 <hr size=3 width=90%>
-<p align=center><img src="Thanksgiving2015/20151126_151015.jpg" align="top"style="max-width: 50%" > <p align=center>
+<p align=center><img src="Thanksgiving2015/20151126_151015.JPG" align="top"style="max-width: 50%" > <p align=center>
 <hr size=3 width=90%>
-<p align=center><img src="Thanksgiving2015/20151126_151229.jpg" align="top"style="max-width: 50%" > <p align=center>
+<p align=center><img src="Thanksgiving2015/20151126_151229.JPG" align="top"style="max-width: 50%" > <p align=center>
 <hr size=3 width=90%>
-<p align=center><img src="Thanksgiving2015/20151126_151233.jpg" align="top"style="max-width: 50%" > <p align=center>
+<p align=center><img src="Thanksgiving2015/20151126_151233.JPG" align="top"style="max-width: 50%" > <p align=center>
 <hr size=3 width=90%>
-<p align=center><img src="Thanksgiving2015/20151126_151237.jpg" align="top"style="max-width: 50%" > <p align=center>
+<p align=center><img src="Thanksgiving2015/20151126_151237.JPG" align="top"style="max-width: 50%" > <p align=center>
 <hr size=3 width=90%>
-<p align=center><img src="Thanksgiving2015/20151126_151240.jpg" align="top"style="max-width: 50%" > <p align=center>
+<p align=center><img src="Thanksgiving2015/20151126_151240.JPG" align="top"style="max-width: 50%" > <p align=center>
 <hr size=3 width=90%>
-<p align=center><img src="Thanksgiving2015/20151126_151245_HDR.jpg" align="top"style="max-width: 50%" > <p align=center>
+<p align=center><img src="Thanksgiving2015/20151126_151245_HDR.JPG" align="top"style="max-width: 50%" > <p align=center>
 <hr size=3 width=90%>
-<p align=center><img src="Thanksgiving2015/20151126_151251.jpg" align="top"style="max-width: 50%" > <p align=center>
+<p align=center><img src="Thanksgiving2015/20151126_151251.JPG" align="top"style="max-width: 50%" > <p align=center>
 <hr size=3 width=90%>
-<p align=center><img src="Thanksgiving2015/20151126_151448.jpg" align="top"style="max-width: 50%" > <p align=center>
+<p align=center><img src="Thanksgiving2015/20151126_151448.JPG" align="top"style="max-width: 50%" > <p align=center>
 <hr size=3 width=90%>
-<p align=center><img src="Thanksgiving2015/20151126_163013.jpg" align="top"style="max-width: 50%" > <p align=center>
+<p align=center><img src="Thanksgiving2015/20151126_163013.JPG" align="top"style="max-width: 50%" > <p align=center>
 <hr size=3 width=90%>
-<p align=center><img src="Thanksgiving2015/20151126_163019.jpg" align="top"style="max-width: 50%" > <p align=center>
+<p align=center><img src="Thanksgiving2015/20151126_163019.JPG" align="top"style="max-width: 50%" > <p align=center>
 <hr size=3 width=90%>
-<p align=center><img src="Thanksgiving2015/20151126_163022.jpg" align="top"style="max-width: 50%" > <p align=center>
+<p align=center><img src="Thanksgiving2015/20151126_163022.JPG" align="top"style="max-width: 50%" > <p align=center>
 <hr size=3 width=90%>
-<p align=center><img src="Thanksgiving2015/20151126_163410_HDR.jpg" align="top"style="max-width: 50%" > <p align=center>
+<p align=center><img src="Thanksgiving2015/20151126_163410_HDR.JPG" align="top"style="max-width: 50%" > <p align=center>
 <hr size=3 width=90%>
-<p align=center><img src="Thanksgiving2015/20151126_163428.jpg" align="top"style="max-width: 50%" > <p align=center>
+<p align=center><img src="Thanksgiving2015/20151126_163428.JPG" align="top"style="max-width: 50%" > <p align=center>
 <hr size=3 width=90%>
 
 <center>The END!</center>
