--- a/Thanksgiving2016.html
+++ b/Thanksgiving2016.html
@@ -19,13 +19,13 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <p align=center> 
 Thanksgiving 2016
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2016/20161124_143715.jpg" align="top"style="max-width: 50%"> <p align=center>
+<p align=center><img src="Thanksgiving2016/20161124_143715.JPG" align="top"style="max-width: 50%"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2016/20161124_143721.jpg" align="top"style="max-width: 50%"> <p align=center>
+<p align=center><img src="Thanksgiving2016/20161124_143721.JPG" align="top"style="max-width: 50%"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2016/20161124_143727.jpg" align="top"style="max-width: 50%"> <p align=center>
+<p align=center><img src="Thanksgiving2016/20161124_143727.JPG" align="top"style="max-width: 50%"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2016/20161124_143734_HDR.jpg" align="top"style="max-width: 50%"> <p align=center>
+<p align=center><img src="Thanksgiving2016/20161124_143734_HDR.JPG" align="top"style="max-width: 50%"> <p align=center>
 <hr size=3 width=90%> 
 
 
