--- a/Thanksgiving1999.html
+++ b/Thanksgiving1999.html
@@ -19,25 +19,25 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <p align=center> 
 Thanksgiving 1999
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving1999/r0100100.jpg" align="top"> Judy, Dad, Scott
+<p align=center><img src="Thanksgiving1999/r0100100.JPG" align="top"> Judy, Dad, Scott
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving1999/r0100101.jpg"align="top"> Marco, Philip, Dennis
+<p align=center><img src="Thanksgiving1999/r0100101.JPG"align="top"> Marco, Philip, Dennis
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving1999/r0100102.jpg"align="top"> Rachel, Angie, Andrew?
+<p align=center><img src="Thanksgiving1999/r0100102.JPG"align="top"> Rachel, Angie, Andrew?
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving1999/r0100103.jpg"align="top"> Marco, Scott, Janice, Cathy
+<p align=center><img src="Thanksgiving1999/r0100103.JPG"align="top"> Marco, Scott, Janice, Cathy
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving1999/r0100105.jpg" align="top"> Sherri, Mom, Judy
+<p align=center><img src="Thanksgiving1999/r0100105.JPG" align="top"> Sherri, Mom, Judy
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving1999/r0100104.jpg" align="top"> Philip, Ray, Dennis
+<p align=center><img src="Thanksgiving1999/r0100104.JPG" align="top"> Philip, Ray, Dennis
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving1999/r0100106.jpg" align="top"> Dennis, Dad, Marco
+<p align=center><img src="Thanksgiving1999/r0100106.JPG" align="top"> Dennis, Dad, Marco
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving1999/r0100107.jpg" align="top"> Dad, Marco, Scott, Janice
+<p align=center><img src="Thanksgiving1999/r0100107.JPG" align="top"> Dad, Marco, Scott, Janice
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving1999/r0100109.jpg" align="top"> Mom & Dad's house (back)
+<p align=center><img src="Thanksgiving1999/r0100109.JPG" align="top"> Mom & Dad's house (back)
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving1999/r0100108.jpg" align="top"> Cars and old chickenhouse
+<p align=center><img src="Thanksgiving1999/r0100108.JPG" align="top"> Cars and old chickenhouse
 <hr size=3 width=90%> 
 
 <center>The END!</center>
