--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@ See our <A href="ccf.html"> "adopted" children </A>
   <tr><td>Sep 02</td><td class="has-text-align-left" data-align="left">@ Minnesota    </td><td> 8:00 Fox </td><td> W    </td><td>          </td></tr>
   <tr><td>Sep 11</td><td class="has-text-align-left" data-align="left">Oregon         </td><td> Noon Fox </td><td> W    </td><td>          </td></tr>
   <tr><td>Sep 18</td><td class="has-text-align-left" data-align="left">Tulsa          </td><td> 3:30 FS1 </td><td> W    </td><td>          </td></tr>
-  <tr><td>Sep 25</td><td class="has-text-align-left" data-align="left">Akron          </td><td> TBA   </td><td> W    </td><td>          </td></tr>
+  <tr><td>Sep 25</td><td class="has-text-align-left" data-align="left">Akron          </td><td> TBA   </td><td> W    </td><td>           </td></tr>
   <tr><td>Oct 02</td><td class="has-text-align-left" data-align="left">@ Rutgers      </td><td> TBA   </td><td> W    </td><td>          </td></tr>
   <tr><td>Oct 09</td><td class="has-text-align-left" data-align="left">Maryland       </td><td> Noon  </td><td> W    </td><td>          </td></tr>
-  <tr><td>Oct 23</td><td class="has-text-align-left" data-align="left">@ Indiana      </td><td> TBA   </td><td> W    </td><td>----- Note -----</td></tr>
+  <tr><td>Oct 23</td><td class="has-text-align-left" data-align="left">@ Indiana      </td><td> TBA   </td><td> W    </td><td>------ Note ------</td></tr>
   <tr><td>Oct 30</td><td class="has-text-align-left" data-align="left">Penn State     </td><td> TBA   </td><td> W    </td><td>          </td></tr>
   <tr><td>Nov 06</td><td class="has-text-align-left" data-align="left">@ Nebraska     </td><td> TBA   </td><td> W    </td><td>          </td></tr>
   <tr><td>Nov 13</td><td class="has-text-align-left" data-align="left">Purdue         </td><td> TBA   </td><td> W    </td><td>          </td></tr>
