--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ See our <A href="ccf.html"> "adopted" children </A>
 <!--......................................................................................................-->
 <center><h1> 2021 </h1><br></center>
 <table border="1" align="center" >
-  <tr><td>Sep 02</td><td class="has-text-align-left" data-align="left">@ Minnesota    </td><td> 8:00 Fox </td><td> W    </td><td>          </td></tr>
+  <tr><td>Sep 02</td><td class="has-text-align-left" data-align="left">@ Minnesota    </td><td> 8:00 Fox </td><td> W 45 - 31 </td><td>          </td></tr>
   <tr><td>Sep 11</td><td class="has-text-align-left" data-align="left">Oregon         </td><td> Noon Fox </td><td> W    </td><td>          </td></tr>
   <tr><td>Sep 18</td><td class="has-text-align-left" data-align="left">Tulsa          </td><td> 3:30 FS1 </td><td> W    </td><td>          </td></tr>
   <tr><td>Sep 25</td><td class="has-text-align-left" data-align="left">Akron          </td><td> TBA   </td><td> W    </td><td>           </td></tr>
