--- a/webcam/webcam-dave.html
+++ b/webcam/webcam-dave.html
@@ -15,7 +15,7 @@
 <BR>
 <TABLE WIDTH="450" BORDER="1" CELLSPACING="2" CELLPADDING="0">
   <TR>
-    <TD WIDTH="50%" bgcolor=red>
+    <TD WIDTH="50%" bgcolor=brown>
       <P><CENTER>&nbsp; <FONT FACE=Arial Size=2 color=white>Image updates every 2 minutes..
      <img src="https://bn1304files.storage.live.com/y4mkeVQE7P-v-SBZ8IlODz-JJkvakjqHcT5lutjE5c7iWPxeb4ryr9sYxom3WPXwQRZ7PuBcjSAG9-oBP9Ix73BkP74qQlzEm8VjXxqhaPk9cfqmkrRPVSjrIBetjtflfjsJ_q1GnoBGn7ghq2NXdqYOZr9xx4nWDU6YFFEP_voceY?width=660&height=371&cropmode=none" width="660" height="371" />
       <BR><FONT FACE=Arial Size=2>
@@ -28,7 +28,7 @@
   </TR>
 
  <TR>
-    <TD WIDTH="50%" bgcolor=red>
+    <TD WIDTH="50%" bgcolor=gray>
       <P><CENTER>&nbsp; <FONT FACE=Arial Size=2 color=white>Image updates every 2 minutes..
     <img src="https://bn1304files.storage.live.com/y4ml88fZHWHQPmwLvE4IkAF2RyG_GQaQf3EZmNmHSN7tmbAgdA1OPYzlkWKS2NKSAY4Cx9-6paBhVkjrB6WEDW1ATcIy_E5gn4AVNZMohOMljOT8l9vorp4JlL893stIpKNXiALLW2zAYzE9WL2e2ShUDX2WuMZZtd5-5rMslC7EtU?width=660&height=371&cropmode=none" width="660" height="371" />
       <BR><FONT FACE=Arial Size=2>
