--- a/webcam/webcam-dave.html
+++ b/webcam/webcam-dave.html
@@ -36,7 +36,7 @@
     </TD>
   </TR>
 </TABLE><BR>
-
+  <P><CENTER>&nbsp; <FONT FACE=Arial Size=5 color=black>Note: Firefox and Internet Explorer should automatically update every 2 minutes. Other browsers do not update.
 
 </BODY>
 </HTML>
