--- a/webcam/webcam.html
+++ b/webcam/webcam.html
@@ -18,9 +18,9 @@
 
     <TD WIDTH="50%" bgcolor=red>
       <P><CENTER>&nbsp; <FONT FACE=Arial Size=2 color=white>Image updates every 10 minutes..
-      <IMG SRC="webcam.jpg"  WIDTH="320" HEIGHT="240" ALIGN="BOTTOM">
+      <IMG SRC="https://bn1304files.storage.live.com/y4m7g2spR98LD4RkXnrF3_xY3ELU6TyOLL02V4TakvzT5vE4NBiXJznabT3YF2KehOy0jK7r0b8y7HoO0tRSJ0jg5k-tda1tpfMhmhpZCQNoteTi8AWzk5LHs_IXvkHCMlLVaI3Lb9rXCdaefb2C3E0659E7VK2lLEjNel8PkLcQ-c?width=660&height=371&cropmode=none"  WIDTH="320" HEIGHT="240" ALIGN="BOTTOM">
       <BR><FONT FACE=Arial Size=2>
-      <A HREF="https://drive.google.com/open?id=1XuV7dU4NaRL1XCYStKG0nVNX3DyGpvaL">Dave's Lucasville Cam</A></CENTER>
+      <A HREF=" "</TD>">Dave's Lucasville Cam</A></CENTER>
     </TD>
 
     <TD WIDTH="50%" bgcolor=brown>
@@ -45,7 +45,7 @@
     <TD WIDTH="50%" bgcolor=lime>
       <P><CENTER>&nbsp;<FONT FACE=Arial Size=2 color=black>Image updates once in a blue moon.
       <!--IMG SRC="https://home.netcom.com/~dnorris/cam/webcam.jpg" WIDTH="320" HEIGHT="240" NATURALSIZEFLAG="0" ALIGN="BOTTOM"-->
-      <IMG SRC="/webcam/testpattern.jpg" WIDTH="320" HEIGHT="240" NATURALSIZEFLAG="0" ALIGN="BOTTOM">
+      <IMG SRC="https://www.dnorris.net/webcam/testpattern.jpg" WIDTH="320" HEIGHT="240" NATURALSIZEFLAG="0" ALIGN="BOTTOM">
       <BR><FONT FACE=Arial Size=2 color=white>
       <A HREF="https://home.netcom.com/~dnorris/cam/webcam.html">Dennis' MD Cam</A></CENTER>
     </TD>
