--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@ See our <A href="ccf.html"> "adopted" children </A>
   <tr><td>Sep 11</td><td class="has-text-align-left" data-align="left">Oregon         </td><td> Noon Fox </td><td> L 28 - 35 </td><td>          </td></tr>
   <tr><td>Sep 18</td><td class="has-text-align-left" data-align="left">Tulsa          </td><td> 3:30 FS1 </td><td> W 41 - 20 </td><td>          </td></tr>
   <tr><td>Sep 25</td><td class="has-text-align-left" data-align="left">Akron          </td><td> 7:30 BTN </td><td> W 59 - 7  </td><td>           </td></tr>
-  <tr><td>Oct 02</td><td class="has-text-align-left" data-align="left">@ Rutgers      </td><td> 3:30 BTN </td><td> W    </td><td>          </td></tr>
-  <tr><td>Oct 09</td><td class="has-text-align-left" data-align="left">Maryland       </td><td> Noon Fox </td><td> W    </td><td>          </td></tr>
-  <tr><td>Oct 23</td><td class="has-text-align-left" data-align="left">@ Indiana      </td><td> TBA   </td><td> W    </td><td>------ Note ------</td></tr>
-  <tr><td>Oct 30</td><td class="has-text-align-left" data-align="left">Penn State     </td><td> TBA   </td><td> W    </td><td>          </td></tr>
-  <tr><td>Nov 06</td><td class="has-text-align-left" data-align="left">@ Nebraska     </td><td> TBA   </td><td> W    </td><td>          </td></tr>
-  <tr><td>Nov 13</td><td class="has-text-align-left" data-align="left">Purdue         </td><td> TBA   </td><td> W    </td><td>          </td></tr>
-  <tr><td>Nov 20</td><td class="has-text-align-left" data-align="left">Michigan State </td><td> TBA   </td><td> W    </td><td>          </td></tr>
-  <tr><td>Nov 27</td><td class="has-text-align-left" data-align="left">@ Michigan     </td><td> Noon Fox  </td><td> W    </td><td>          </td></tr>
+  <tr><td>Oct 02</td><td class="has-text-align-left" data-align="left">@ Rutgers      </td><td> 3:30 BTN </td><td> W 52 - 13 </td><td>          </td></tr>
+  <tr><td>Oct 09</td><td class="has-text-align-left" data-align="left">Maryland       </td><td> Noon Fox </td><td> W 66 - 17 </td><td>          </td></tr>
+  <tr><td>Oct 23</td><td class="has-text-align-left" data-align="left">@ Indiana      </td><td> 7:30 ABC </td><td> W 54 - 7  </td><td>------ Note ------</td></tr>
+  <tr><td>Oct 30</td><td class="has-text-align-left" data-align="left">Penn State     </td><td> 7:30 ABC </td><td> W 33 - 24 </td><td>          </td></tr>
+  <tr><td>Nov 06</td><td class="has-text-align-left" data-align="left">@ Nebraska     </td><td> Noon Fox </td><td> W 26 - 17 </td><td>          </td></tr>
+  <tr><td>Nov 13</td><td class="has-text-align-left" data-align="left">Purdue         </td><td> 3:30 ABC </td><td> W    </td><td>          </td></tr>
+  <tr><td>Nov 20</td><td class="has-text-align-left" data-align="left">Michigan State </td><td> Noon Fox </td><td> W    </td><td>          </td></tr>
+  <tr><td>Nov 27</td><td class="has-text-align-left" data-align="left">@ Michigan     </td><td> Noon Fox </td><td> W    </td><td>          </td></tr>
 </table></center>
 <center><h3>Jan 01, 2022  some Bowl vs.  </h3></center>
 <!-- /wp:table -->
