--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@ See our <A href="ccf.html"> "adopted" children </A>
   <tr><td>Oct 23</td><td class="has-text-align-left" data-align="left">@ Indiana      </td><td> 7:30 ABC </td><td> W 54 - 7  </td><td>------ Note ------</td></tr>
   <tr><td>Oct 30</td><td class="has-text-align-left" data-align="left">Penn State     </td><td> 7:30 ABC </td><td> W 33 - 24 </td><td>          </td></tr>
   <tr><td>Nov 06</td><td class="has-text-align-left" data-align="left">@ Nebraska     </td><td> Noon Fox </td><td> W 26 - 17 </td><td>          </td></tr>
-  <tr><td>Nov 13</td><td class="has-text-align-left" data-align="left">Purdue         </td><td> 3:30 ABC </td><td> W    </td><td>          </td></tr>
-  <tr><td>Nov 20</td><td class="has-text-align-left" data-align="left">Michigan State </td><td> Noon Fox </td><td> W    </td><td>          </td></tr>
-  <tr><td>Nov 27</td><td class="has-text-align-left" data-align="left">@ Michigan     </td><td> Noon Fox </td><td> W    </td><td>          </td></tr>
+  <tr><td>Nov 13</td><td class="has-text-align-left" data-align="left">Purdue         </td><td> 3:30 ABC </td><td> W 59 - 31 </td><td>          </td></tr>
+  <tr><td>Nov 20</td><td class="has-text-align-left" data-align="left">Michigan State </td><td> Noon Fox </td><td> W 56 - 7  </td><td>          </td></tr>
+  <tr><td>Nov 27</td><td class="has-text-align-left" data-align="left">@ Michigan     </td><td> Noon Fox </td><td> L 27 - 42 </td><td>          </td></tr>
 </table></center>
-<center><h3>Jan 01, 2022  some Bowl vs.  </h3></center>
+<center><h3>Jan 01, 2022  Rose Bowl vs. Utah </h3></center>
 <!-- /wp:table -->
 </table>
 <!--......................................................................................................-->
