--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 
 <p>
 <center><h2> Welcome to the Norris Page</h2></center>
-<p><center>from Lucasville, Ohio <A HREF="https://www.wunderground.com/dashboard/pws/KOHLUCAS2"> Dave's Weather station </A> </center></p>
+<p><center>from Lucasville, Ohio <A HREF="https://www.wunderground.com/dashboard/pws/KOHLUCAS11"> Dave's Weather station </A> </center>
+  or <a href="https://ambientweather.net/dashboard/ef4ef31d0202bd012f92d21361611538/tiles"></a>Ambient Weather</p>
 
 <center>
 <p>
